# codex-watch

./: .gitignore  README.md  com.codex.watch.plist  pyproject.toml
codex_watch/: __init__.py  __main__.py  checker.py  cli.py  config.py  monitor.py  notifier.py  usage.py
scripts/: install.sh
