[project]
name = "codex-watch"
version = "0.1.0"
description = "自动检测 Codex 进程的守护监控工具"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Joe Ye"}]
keywords = ["codex", "monitor", "watchdog", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]

[project.scripts]
codex-watch = "codex_watch.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
